<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/boardPadding"
    android:fitsSystemWindows="true">

    <TextView
        android:id="@+id/authorName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/about_author_name"
        android:textAppearance="@android:style/TextAppearance.Large"
        app:layout_constraintStart_toEndOf="@+id/by"
        app:layout_constraintTop_toTopOf="@+id/by" />

    <TextView
        android:id="@+id/by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/about_author_label"
        android:textAppearance="@android:style/TextAppearance.Large"
        app:layout_constraintStart_toEndOf="@+id/authorPhoto"
        app:layout_constraintTop_toTopOf="@+id/authorPhoto" />

    <ImageView
        android:id="@+id/linkedInLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/about_author_linked_in_description"
        app:layout_constraintStart_toStartOf="@+id/authorPhoto"
        app:layout_constraintTop_toBottomOf="@+id/authorPhoto"
        app:srcCompat="@drawable/linked_in" />

    <TextView
        android:id="@+id/linkedInUrl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="2dp"
        android:text="@string/about_author_linked_in"
        android:textAppearance="@android:style/TextAppearance.Medium"
        app:layout_constraintStart_toEndOf="@+id/linkedInLogo"
        app:layout_constraintTop_toTopOf="@+id/linkedInLogo" />

    <ImageView
        android:id="@+id/authorPhoto"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="56dp"
        android:contentDescription="@string/about_author_photo_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/me" />

</androidx.constraintlayout.widget.ConstraintLayout>
